--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,9 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - asn1crypto=1.3.0
+  - attrs=19.3.0
   - bcrypt=3.1.7
+  - black=19.10b0
   - ca-certificates=2020.1.1
   - certifi=2019.11.28
   - cffi=1.14.0
@@ -22,9 +24,11 @@ dependencies:
   - libpq=11.2
   - libsodium=1.0.16
   - libstdcxx-ng=9.1.0
+  - mypy_extensions=0.4.3
   - ncurses=6.2
   - openssl=1.1.1d
   - paramiko=2.7.1
+  - pathspec=0.7.0
   - pip=20.0.2
   - psycopg2=2.8.4
   - pycparser=2.19
@@ -33,17 +37,31 @@ dependencies:
   - pysocks=1.7.1
   - python=3.8.1
   - readline=7.0
+  - regex=2020.2.20
   - requests=2.23.0
   - setuptools=46.0.0
   - six=1.14.0
   - sqlalchemy=1.3.13
   - sqlite=3.31.1
   - tk=8.6.8
+  - toml=0.10.0
+  - typed-ast=1.4.1
+  - typing_extensions=3.7.4.1
   - urllib3=1.25.8
   - wheel=0.34.2
   - xz=5.2.4
   - zlib=1.2.11
   - pip:
+    - appdirs==1.4.3
+    - argcomplete==1.11.1
     - daiquiri==2.1.1
+    - distro==1.4.0
+    - jedi==0.16.0
+    - parso==0.6.2
+    - prompt-toolkit==3.0.4
+    - ptpython==3.0.1
+    - pygments==2.6.1
     - python-json-logger==0.1.11
+    - userpath==1.3.0
+    - wcwidth==0.1.8
 prefix: /home/servilla/anaconda3/envs/prune
