--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,40 @@
+appdirs==1.4.3
+argcomplete==1.11.1
 asn1crypto==1.3.0
+attrs==19.3.0
 bcrypt==3.1.7
+black==19.10b0
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
 Click==7.0
 cryptography==2.8
 daiquiri==2.1.1
+distro==1.4.0
 fabric==2.5.0
 idna==2.8
 invoke==1.3.0
+jedi==0.16.0
+mypy-extensions==0.4.3
 paramiko==2.7.1
--e git+git@github.com:PASTAplus/prune.git@9788c2c9aa7f2e702dfccfbb5b2a1b48f02f6d3c#egg=pastaplus.prune&subdirectory=src
+parso==0.6.2
+pathspec==0.7.0
+prompt-toolkit==3.0.4
 psycopg2==2.8.4
+ptpython==3.0.1
 pycparser==2.19
+Pygments==2.6.1
 PyNaCl==1.3.0
 pyOpenSSL==19.1.0
 PySocks==1.7.1
 python-json-logger==0.1.11
+regex==2020.2.20
 requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.13
+toml==0.10.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.1
 urllib3==1.25.8
+userpath==1.3.0
+wcwidth==0.1.8
