Mitigate paramiko timeout

--- a/environment.yml
+++ b/environment.yml
@@ -11,10 +11,10 @@ dependencies:
   - certifi=2019.11.28
   - cffi=1.14.0
   - chardet=3.0.4
-  - click=7.0
+  - click=7.1.1
   - cryptography=2.8
   - fabric=2.5.0
-  - idna=2.8
+  - idna=2.9
   - invoke=1.3.0
   - krb5=1.16.4
   - ld_impl_linux-64=2.33.1
@@ -26,22 +26,22 @@ dependencies:
   - libstdcxx-ng=9.1.0
   - mypy_extensions=0.4.3
   - ncurses=6.2
-  - openssl=1.1.1d
+  - openssl=1.1.1e
   - paramiko=2.7.1
   - pathspec=0.7.0
   - pip=20.0.2
   - psycopg2=2.8.4
-  - pycparser=2.19
+  - pycparser=2.20
   - pynacl=1.3.0
   - pyopenssl=19.1.0
   - pysocks=1.7.1
-  - python=3.8.1
+  - python=3.8.2
   - readline=7.0
   - regex=2020.2.20
   - requests=2.23.0
-  - setuptools=46.0.0
+  - setuptools=46.1.1
   - six=1.14.0
-  - sqlalchemy=1.3.13
+  - sqlalchemy=1.3.15
   - sqlite=3.31.1
   - tk=8.6.8
   - toml=0.10.0
