--- a/environment.yml
+++ b/environment.yml
@@ -1,67 +1,50 @@
 name: prune
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
-  - asn1crypto=1.3.0
-  - attrs=19.3.0
-  - bcrypt=3.1.7
-  - black=19.10b0
-  - ca-certificates=2020.1.1
-  - certifi=2019.11.28
-  - cffi=1.14.0
+  - _openmp_mutex=4.5
+  - bcrypt=3.2.0
+  - brotlipy=0.7.0
+  - ca-certificates=2020.6.20
+  - certifi=2020.6.20
+  - cffi=1.14.3
   - chardet=3.0.4
-  - click=7.1.1
-  - cryptography=2.8
+  - click=7.1.2
+  - cryptography=3.2.1
   - fabric=2.5.0
-  - idna=2.9
-  - invoke=1.3.0
-  - krb5=1.16.4
-  - ld_impl_linux-64=2.33.1
-  - libedit=3.1.20181209
+  - idna=2.10
+  - invoke=1.4.1
+  - krb5=1.17.1
+  - ld_impl_linux-64=2.35
+  - libedit=3.1.20191231
   - libffi=3.2.1
-  - libgcc-ng=9.1.0
-  - libpq=11.2
-  - libsodium=1.0.16
-  - libstdcxx-ng=9.1.0
-  - mypy_extensions=0.4.3
+  - libgcc-ng=9.3.0
+  - libgomp=9.3.0
+  - libpq=12.3
+  - libsodium=1.0.18
+  - libstdcxx-ng=9.3.0
   - ncurses=6.2
-  - openssl=1.1.1e
-  - paramiko=2.7.1
-  - pathspec=0.7.0
-  - pip=20.0.2
-  - psycopg2=2.8.4
+  - openssl=1.1.1h
+  - paramiko=2.7.2
+  - pip=20.2.4
+  - psycopg2=2.8.6
   - pycparser=2.20
-  - pynacl=1.3.0
+  - pynacl=1.4.0
   - pyopenssl=19.1.0
   - pysocks=1.7.1
-  - python=3.8.2
-  - readline=7.0
-  - regex=2020.2.20
-  - requests=2.23.0
-  - setuptools=46.1.1
-  - six=1.14.0
-  - sqlalchemy=1.3.15
-  - sqlite=3.31.1
-  - tk=8.6.8
-  - toml=0.10.0
-  - typed-ast=1.4.1
-  - typing_extensions=3.7.4.1
-  - urllib3=1.25.8
-  - wheel=0.34.2
-  - xz=5.2.4
+  - python=3.8.6
+  - python_abi=3.8
+  - readline=8.0
+  - requests=2.24.0
+  - setuptools=49.6.0
+  - six=1.15.0
+  - sqlalchemy=1.3.20
+  - sqlite=3.33.0
+  - tk=8.6.10
+  - urllib3=1.25.11
+  - wheel=0.35.1
+  - xz=5.2.5
   - zlib=1.2.11
-  - pip:
-    - appdirs==1.4.3
-    - argcomplete==1.11.1
-    - daiquiri==2.1.1
-    - distro==1.4.0
-    - jedi==0.16.0
-    - parso==0.6.2
-    - prompt-toolkit==3.0.4
-    - ptpython==3.0.1
-    - pygments==2.6.1
-    - python-json-logger==0.1.11
-    - userpath==1.3.0
-    - wcwidth==0.1.8
 prefix: /home/servilla/anaconda3/envs/prune
