--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,23 @@
-appdirs==1.4.3
-argcomplete==1.11.1
-asn1crypto==1.3.0
-attrs==19.3.0
-bcrypt==3.1.7
-black==19.10b0
-certifi==2019.11.28
-cffi==1.14.0
+bcrypt==3.2.0
+brotlipy==0.7.0
+certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
-click==7.1.1
-cryptography==2.8
-daiquiri==2.1.1
-distro==1.4.0
+click==7.1.2
+cryptography==3.2.1
 fabric==2.5.0
-idna==2.9
-invoke==1.3.0
-jedi==0.16.0
-mypy-extensions==0.4.3
-paramiko==2.7.1
-parso==0.6.2
--e git+git@github.com:PASTAplus/prune.git@f2fa1959ad60c679dc00587c902edf391950d0ed#egg=pastaplus.prune
-pathspec==0.7.0
-prompt-toolkit==3.0.4
-psycopg2==2.8.4
-ptpython==3.0.1
+idna==2.10
+invoke==1.4.1
+paramiko==2.7.2
+pip==20.2.4
+psycopg2==2.8.6
 pycparser==2.20
-Pygments==2.6.1
-PyNaCl==1.3.0
+PyNaCl==1.4.0
 pyOpenSSL==19.1.0
 PySocks==1.7.1
-python-json-logger==0.1.11
-regex==2020.2.20
-requests==2.23.0
-six==1.14.0
-SQLAlchemy==1.3.15
-toml==0.10.0
-typed-ast==1.4.1
-typing-extensions==3.7.4.1
-urllib3==1.25.8
-userpath==1.3.0
-wcwidth==0.1.8
+requests==2.24.0
+setuptools==49.6.0.post20201009
+six==1.15.0
+SQLAlchemy==1.3.20
+urllib3==1.25.11
+wheel==0.35.1
