--- a/environment.yml
+++ b/environment.yml
@@ -7,44 +7,44 @@ dependencies:
   - _openmp_mutex=4.5
   - bcrypt=3.2.0
   - brotlipy=0.7.0
-  - ca-certificates=2020.6.20
-  - certifi=2020.6.20
-  - cffi=1.14.3
-  - chardet=3.0.4
+  - ca-certificates=2020.12.5
+  - certifi=2020.12.5
+  - cffi=1.14.4
+  - chardet=4.0.0
   - click=7.1.2
-  - cryptography=3.2.1
-  - fabric=2.5.0
+  - cryptography=3.4.4
+  - fabric=2.6.0
   - idna=2.10
-  - invoke=1.4.1
-  - krb5=1.17.1
-  - ld_impl_linux-64=2.35
+  - invoke=1.5.0
+  - krb5=1.17.2
+  - ld_impl_linux-64=2.35.1
   - libedit=3.1.20191231
-  - libffi=3.2.1
+  - libffi=3.3
   - libgcc-ng=9.3.0
   - libgomp=9.3.0
   - libpq=12.3
   - libsodium=1.0.18
   - libstdcxx-ng=9.3.0
   - ncurses=6.2
-  - openssl=1.1.1h
+  - openssl=1.1.1i
   - paramiko=2.7.2
-  - pip=20.2.4
+  - pip=21.0.1
   - psycopg2=2.8.6
   - pycparser=2.20
   - pynacl=1.4.0
-  - pyopenssl=19.1.0
+  - pyopenssl=20.0.1
   - pysocks=1.7.1
   - python=3.8.6
   - python_abi=3.8
   - readline=8.0
-  - requests=2.24.0
+  - requests=2.25.1
   - setuptools=49.6.0
   - six=1.15.0
-  - sqlalchemy=1.3.20
-  - sqlite=3.33.0
+  - sqlalchemy=1.3.23
+  - sqlite=3.34.0
   - tk=8.6.10
-  - urllib3=1.25.11
-  - wheel=0.35.1
+  - urllib3=1.26.3
+  - wheel=0.36.2
   - xz=5.2.5
   - zlib=1.2.11
 prefix: /home/servilla/anaconda3/envs/prune
