--- a/environment.yml
+++ b/environment.yml
@@ -9,11 +9,13 @@ dependencies:
   - brotlipy=0.7.0
   - ca-certificates=2020.12.5
   - certifi=2020.12.5
-  - cffi=1.14.4
+  - cffi=1.14.5
   - chardet=4.0.0
   - click=7.1.2
-  - cryptography=3.4.4
+  - cryptography=3.4.7
+  - daiquiri=3.0.0
   - fabric=2.6.0
+  - greenlet=1.0.0
   - idna=2.10
   - invoke=1.5.0
   - krb5=1.17.2
@@ -22,28 +24,30 @@ dependencies:
   - libffi=3.3
   - libgcc-ng=9.3.0
   - libgomp=9.3.0
-  - libpq=12.3
+  - libpq=13.1
   - libsodium=1.0.18
   - libstdcxx-ng=9.3.0
   - ncurses=6.2
-  - openssl=1.1.1i
+  - openssl=1.1.1k
   - paramiko=2.7.2
+  - pathlib2=2.3.5
   - pip=21.0.1
   - psycopg2=2.8.6
   - pycparser=2.20
   - pynacl=1.4.0
   - pyopenssl=20.0.1
   - pysocks=1.7.1
-  - python=3.8.6
+  - python=3.8.8
+  - python-json-logger=2.0.1
   - python_abi=3.8
   - readline=8.0
   - requests=2.25.1
   - setuptools=49.6.0
   - six=1.15.0
-  - sqlalchemy=1.3.23
-  - sqlite=3.34.0
+  - sqlalchemy=1.4.7
+  - sqlite=3.35.4
   - tk=8.6.10
-  - urllib3=1.26.3
+  - urllib3=1.26.4
   - wheel=0.36.2
   - xz=5.2.5
   - zlib=1.2.11
