--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,28 @@
 bcrypt==3.2.0
 brotlipy==0.7.0
 certifi==2020.12.5
-cffi==1.14.4
+cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
-cryptography==3.4.4
+cryptography==3.4.7
+daiquiri==3.0.0
 fabric==2.6.0
+greenlet==1.0.0
 idna==2.10
 invoke==1.5.0
 paramiko==2.7.2
+pastaplus.prune==2020.3.25
+pathlib2==2.3.5
 pip==21.0.1
 psycopg2==2.8.6
 pycparser==2.20
 PyNaCl==1.4.0
 pyOpenSSL==20.0.1
 PySocks==1.7.1
+python-json-logger==2.0.1
 requests==2.25.1
 setuptools==49.6.0.post20210108
 six==1.15.0
-SQLAlchemy==1.3.23
-urllib3==1.26.3
+SQLAlchemy==1.4.7
+urllib3==1.26.4
 wheel==0.36.2
