--- a/environment.yml
+++ b/environment.yml
@@ -5,50 +5,57 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - bcrypt=3.2.0
+  - bcrypt=3.2.2
   - brotlipy=0.7.0
-  - ca-certificates=2020.12.5
-  - certifi=2020.12.5
-  - cffi=1.14.5
-  - chardet=4.0.0
-  - click=7.1.2
-  - cryptography=3.4.7
+  - bzip2=1.0.8
+  - ca-certificates=2021.10.8
+  - certifi=2021.10.8
+  - cffi=1.15.0
+  - charset-normalizer=2.0.12
+  - click=8.1.3
+  - cryptography=36.0.2
   - daiquiri=3.0.0
-  - fabric=2.6.0
-  - greenlet=1.0.0
-  - idna=2.10
-  - invoke=1.5.0
-  - krb5=1.17.2
-  - ld_impl_linux-64=2.35.1
+  - fabric=2.7.0
+  - greenlet=1.1.2
+  - idna=3.3
+  - invoke=1.7.0
+  - keyutils=1.6.1
+  - krb5=1.19.3
+  - ld_impl_linux-64=2.36.1
   - libedit=3.1.20191231
-  - libffi=3.3
-  - libgcc-ng=9.3.0
-  - libgomp=9.3.0
-  - libpq=13.1
+  - libffi=3.4.2
+  - libgcc-ng=11.2.0
+  - libgomp=11.2.0
+  - libnsl=2.0.0
+  - libpq=14.2
   - libsodium=1.0.18
-  - libstdcxx-ng=9.3.0
-  - ncurses=6.2
-  - openssl=1.1.1k
-  - paramiko=2.7.2
-  - pathlib2=2.3.5
-  - pip=21.0.1
-  - psycopg2=2.8.6
-  - pycparser=2.20
-  - pynacl=1.4.0
-  - pyopenssl=20.0.1
+  - libstdcxx-ng=11.2.0
+  - libuuid=2.32.1
+  - libzlib=1.2.11
+  - ncurses=6.3
+  - openssl=1.1.1o
+  - paramiko=2.10.4
+  - pathlib2=2.3.7.post1
+  - pip=22.0.4
+  - psycopg2=2.9.3
+  - pycparser=2.21
+  - pynacl=1.5.0
+  - pyopenssl=22.0.0
   - pysocks=1.7.1
-  - python=3.8.8
+  - python=3.8.13
   - python-json-logger=2.0.1
   - python_abi=3.8
-  - readline=8.0
-  - requests=2.25.1
-  - setuptools=49.6.0
-  - six=1.15.0
-  - sqlalchemy=1.4.7
-  - sqlite=3.35.4
-  - tk=8.6.10
-  - urllib3=1.26.4
-  - wheel=0.36.2
+  - readline=8.1
+  - requests=2.27.1
+  - setuptools=62.1.0
+  - six=1.16.0
+  - sqlalchemy=1.4.36
+  - sqlite=3.38.4
+  - tk=8.6.12
+  - urllib3=1.26.9
+  - wheel=0.37.1
   - xz=5.2.5
   - zlib=1.2.11
+  - pip:
+    - pastaplus-prune==2020.3.25
 prefix: /home/servilla/anaconda3/envs/prune
