--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
-bcrypt==3.2.0
+bcrypt==3.2.2
 brotlipy==0.7.0
-certifi==2021.5.30
-cffi==1.14.5
-chardet==4.0.0
-click==8.0.1
-cryptography==3.4.7
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.3
+cryptography==36.0.2
 daiquiri==3.0.0
-fabric==2.6.0
-greenlet==1.1.0
-idna==2.10
-invoke==1.5.0
-paramiko==2.7.2
-pathlib2==2.3.5
-pip==21.1.2
-psycopg2==2.8.6
-pycparser==2.20
-PyNaCl==1.4.0
-pyOpenSSL==20.0.1
+fabric==2.7.0
+greenlet==1.1.2
+idna==3.3
+invoke==1.7.0
+paramiko==2.10.4
+pastaplus.prune==2020.3.25
+pathlib2==2.3.7.post1
+pip==22.0.4
+psycopg2==2.9.3
+pycparser==2.21
+PyNaCl==1.5.0
+pyOpenSSL==22.0.0
 PySocks==1.7.1
 python-json-logger==2.0.1
-requests==2.25.1
-setuptools==49.6.0
+requests==2.27.1
+setuptools==62.1.0
 six==1.16.0
-SQLAlchemy==1.4.18
-urllib3==1.26.5
-wheel==0.36.2
+SQLAlchemy==1.4.36
+urllib3==1.26.9
+wheel==0.37.1
