Add tiers to config

--- a/src/prune/config.py.template
+++ b/src/prune/config.py.template
@@ -29,3 +29,7 @@ class Config:
     TOMBSTONE = (
         "https://edirepository.org/data/tombstone"
     )
+
+    PRODUCTION = "package.lternet.edu"
+    STAGING = "package-s.lternet.edu"
+    DEVELOPMENT = "package-d.lternet.edu"
