--- a/environment.yml
+++ b/environment.yml
@@ -5,57 +5,63 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - attrs=22.1.0
   - bcrypt=3.2.2
   - brotlipy=0.7.0
   - bzip2=1.0.8
-  - ca-certificates=2021.10.8
-  - certifi=2021.10.8
-  - cffi=1.15.0
-  - charset-normalizer=2.0.12
+  - ca-certificates=2022.9.24
+  - certifi=2022.9.24
+  - cffi=1.15.1
+  - charset-normalizer=2.1.1
   - click=8.1.3
-  - cryptography=36.0.2
+  - cryptography=38.0.2
   - daiquiri=3.0.0
-  - fabric=2.7.0
-  - greenlet=1.1.2
-  - idna=3.3
-  - invoke=1.7.0
+  - fabric=2.7.1
+  - greenlet=1.1.3
+  - idna=3.4
+  - iniconfig=1.1.1
+  - invoke=1.7.3
   - keyutils=1.6.1
   - krb5=1.19.3
-  - ld_impl_linux-64=2.36.1
+  - ld_impl_linux-64=2.39
   - libedit=3.1.20191231
   - libffi=3.4.2
-  - libgcc-ng=11.2.0
-  - libgomp=11.2.0
+  - libgcc-ng=12.2.0
+  - libgomp=12.2.0
   - libnsl=2.0.0
-  - libpq=14.2
+  - libpq=14.5
   - libsodium=1.0.18
-  - libstdcxx-ng=11.2.0
+  - libsqlite=3.39.4
+  - libstdcxx-ng=12.2.0
   - libuuid=2.32.1
-  - libzlib=1.2.11
+  - libzlib=1.2.13
   - ncurses=6.3
-  - openssl=1.1.1o
-  - paramiko=2.10.4
+  - openssl=1.1.1q
+  - packaging=21.3
+  - paramiko=2.11.0
   - pathlib2=2.3.7.post1
-  - pip=22.0.4
+  - pip=22.3
+  - pluggy=1.0.0
   - psycopg2=2.9.3
+  - py=1.11.0
   - pycparser=2.21
   - pynacl=1.5.0
-  - pyopenssl=22.0.0
+  - pyopenssl=22.1.0
+  - pyparsing=3.0.9
   - pysocks=1.7.1
-  - python=3.8.13
+  - pytest=7.1.3
+  - python=3.10.6
   - python-json-logger=2.0.1
-  - python_abi=3.8
-  - readline=8.1
-  - requests=2.27.1
-  - setuptools=62.1.0
+  - python_abi=3.10
+  - readline=8.1.2
+  - requests=2.28.1
+  - setuptools=65.5.0
   - six=1.16.0
-  - sqlalchemy=1.4.36
-  - sqlite=3.38.4
+  - sqlalchemy=1.4.42
   - tk=8.6.12
-  - urllib3=1.26.9
+  - tomli=2.0.1
+  - tzdata=2022e
+  - urllib3=1.26.11
   - wheel=0.37.1
-  - xz=5.2.5
-  - zlib=1.2.11
-  - pip:
-    - pastaplus-prune==2020.3.25
+  - xz=5.2.6
 prefix: /home/servilla/anaconda3/envs/prune
