--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,35 @@
+attrs==22.1.0
 bcrypt==3.2.2
 brotlipy==0.7.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
 click==8.1.3
-cryptography==36.0.2
+cryptography==38.0.2
 daiquiri==3.0.0
-fabric==2.7.0
-greenlet==1.1.2
-idna==3.3
-invoke==1.7.0
-paramiko==2.10.4
+fabric==2.7.1
+greenlet==1.1.3
+idna==3.4
+iniconfig==1.1.1
+invoke==1.7.3
+packaging==21.3
+paramiko==2.11.0
 pathlib2==2.3.7.post1
-pip==22.0.4
+pip==22.3
+pluggy==1.0.0
 psycopg2==2.9.3
+py==1.11.0
 pycparser==2.21
 PyNaCl==1.5.0
-pyOpenSSL==22.0.0
+pyOpenSSL==22.1.0
+pyparsing==3.0.9
 PySocks==1.7.1
+pytest==7.1.3
 python-json-logger==2.0.1
-requests==2.27.1
-setuptools==62.1.0
+requests==2.28.1
+setuptools==65.5.0
 six==1.16.0
-SQLAlchemy==1.4.36
-urllib3==1.26.9
+SQLAlchemy==1.4.42
+tomli==2.0.1
+urllib3==1.26.11
 wheel==0.37.1
