--- a/environment.yml
+++ b/environment.yml
@@ -5,63 +5,64 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - attrs=22.1.0
+  - attrs=22.2.0
   - bcrypt=3.2.2
   - brotlipy=0.7.0
   - bzip2=1.0.8
-  - ca-certificates=2022.9.24
-  - certifi=2022.9.24
+  - ca-certificates=2022.12.7
+  - certifi=2022.12.7
   - cffi=1.15.1
   - charset-normalizer=2.1.1
   - click=8.1.3
-  - cryptography=38.0.2
+  - colorama=0.4.6
+  - cryptography=40.0.1
   - daiquiri=3.0.0
-  - fabric=2.7.1
-  - greenlet=1.1.3
+  - exceptiongroup=1.1.1
+  - fabric=3.0.0
+  - greenlet=2.0.2
   - idna=3.4
-  - iniconfig=1.1.1
-  - invoke=1.7.3
+  - iniconfig=2.0.0
+  - invoke=2.0.0
   - keyutils=1.6.1
-  - krb5=1.19.3
-  - ld_impl_linux-64=2.39
+  - krb5=1.20.1
+  - ld_impl_linux-64=2.40
   - libedit=3.1.20191231
   - libffi=3.4.2
   - libgcc-ng=12.2.0
   - libgomp=12.2.0
   - libnsl=2.0.0
-  - libpq=14.5
+  - libpq=15.2
   - libsodium=1.0.18
-  - libsqlite=3.39.4
+  - libsqlite=3.40.0
   - libstdcxx-ng=12.2.0
-  - libuuid=2.32.1
+  - libuuid=2.38.1
   - libzlib=1.2.13
   - ncurses=6.3
-  - openssl=1.1.1q
-  - packaging=21.3
-  - paramiko=2.11.0
-  - pathlib2=2.3.7.post1
-  - pip=22.3
+  - openssl=3.1.0
+  - packaging=23.0
+  - paramiko=3.1.0
+  - pip=23.0.1
   - pluggy=1.0.0
   - psycopg2=2.9.3
-  - py=1.11.0
   - pycparser=2.21
   - pynacl=1.5.0
-  - pyopenssl=22.1.0
-  - pyparsing=3.0.9
+  - pyopenssl=23.1.1
   - pysocks=1.7.1
-  - pytest=7.1.3
-  - python=3.10.6
-  - python-json-logger=2.0.1
+  - pytest=7.2.2
+  - python=3.10.10
+  - python-json-logger=2.0.7
   - python_abi=3.10
-  - readline=8.1.2
-  - requests=2.28.1
-  - setuptools=65.5.0
+  - readline=8.2
+  - requests=2.28.2
+  - setuptools=67.6.1
   - six=1.16.0
-  - sqlalchemy=1.4.42
+  - sqlalchemy=2.0.7
   - tk=8.6.12
   - tomli=2.0.1
-  - tzdata=2022e
-  - urllib3=1.26.11
-  - wheel=0.37.1
+  - typing-extensions=4.5.0
+  - typing_extensions=4.5.0
+  - tzdata=2023c
+  - urllib3=1.26.15
+  - wheel=0.40.0
   - xz=5.2.6
 prefix: /home/servilla/anaconda3/envs/prune
