--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,35 @@
-attrs==22.1.0
+attrs==22.2.0
 bcrypt==3.2.2
 brotlipy==0.7.0
-certifi==2022.9.24
+certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
-cryptography==38.0.2
+colorama==0.4.6
+cryptography==40.0.1
 daiquiri==3.0.0
-fabric==2.7.1
-greenlet==1.1.3
+exceptiongroup==1.1.1
+fabric==3.0.0
+greenlet==2.0.2
 idna==3.4
-iniconfig==1.1.1
-invoke==1.7.3
-packaging==21.3
-paramiko==2.11.0
-pathlib2==2.3.7.post1
-pip==22.3
+iniconfig==2.0.0
+invoke==2.0.0
+packaging==23.0
+paramiko==3.1.0
+pip==23.0.1
 pluggy==1.0.0
 psycopg2==2.9.3
-py==1.11.0
 pycparser==2.21
 PyNaCl==1.5.0
-pyOpenSSL==22.1.0
-pyparsing==3.0.9
+pyOpenSSL==23.1.1
 PySocks==1.7.1
-pytest==7.1.3
-python-json-logger==2.0.1
-requests==2.28.1
-setuptools==65.5.0
+pytest==7.2.2
+python-json-logger==2.0.7
+requests==2.28.2
+setuptools==67.6.1
 six==1.16.0
-SQLAlchemy==1.4.42
+SQLAlchemy==2.0.7
 tomli==2.0.1
-urllib3==1.26.11
-wheel==0.37.1
+typing_extensions==4.5.0
+urllib3==1.26.15
+wheel==0.40.0
