--- a/environment.yml
+++ b/environment.yml
@@ -56,7 +56,7 @@ dependencies:
   - requests=2.28.2
   - setuptools=67.6.1
   - six=1.16.0
-  - sqlalchemy=2.0.7
+  - sqlalchemy=1.4.46
   - tk=8.6.12
   - tomli=2.0.1
   - typing-extensions=4.5.0
@@ -65,4 +65,6 @@ dependencies:
   - urllib3=1.26.15
   - wheel=0.40.0
   - xz=5.2.6
+  - pip:
+      - pastaplus-prune==2023.3.30
 prefix: /home/servilla/anaconda3/envs/prune
