--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ iniconfig==2.0.0
 invoke==2.0.0
 packaging==23.0
 paramiko==3.1.0
+pastaplus.prune==2023.3.30
 pip==23.0.1
 pluggy==1.0.0
 psycopg2==2.9.3
@@ -28,7 +29,7 @@ python-json-logger==2.0.7
 requests==2.28.2
 setuptools==67.6.1
 six==1.16.0
-SQLAlchemy==2.0.7
+SQLAlchemy==1.4.46
 tomli==2.0.1
 typing_extensions==4.5.0
 urllib3==1.26.15
