--- a/environment.yml
+++ b/environment.yml
@@ -5,66 +5,67 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - attrs=22.2.0
   - bcrypt=3.2.2
-  - brotlipy=0.7.0
+  - brotli-python=1.0.9
   - bzip2=1.0.8
-  - ca-certificates=2022.12.7
-  - certifi=2022.12.7
+  - ca-certificates=2023.7.22
+  - certifi=2023.7.22
   - cffi=1.15.1
-  - charset-normalizer=2.1.1
-  - click=8.1.3
+  - charset-normalizer=3.2.0
+  - click=8.1.6
   - colorama=0.4.6
-  - cryptography=40.0.1
+  - cryptography=41.0.3
   - daiquiri=3.0.0
-  - exceptiongroup=1.1.1
-  - fabric=3.0.0
+  - decorator=5.1.1
+  - deprecated=1.2.14
+  - exceptiongroup=1.1.3
+  - fabric=3.2.1
   - greenlet=2.0.2
   - idna=3.4
   - iniconfig=2.0.0
-  - invoke=2.0.0
+  - invoke=2.2.0
   - keyutils=1.6.1
-  - krb5=1.20.1
+  - krb5=1.21.2
   - ld_impl_linux-64=2.40
   - libedit=3.1.20191231
   - libffi=3.4.2
-  - libgcc-ng=12.2.0
-  - libgomp=12.2.0
+  - libgcc-ng=13.1.0
+  - libgomp=13.1.0
   - libnsl=2.0.0
-  - libpq=15.2
+  - libpq=15.4
   - libsodium=1.0.18
-  - libsqlite=3.40.0
-  - libstdcxx-ng=12.2.0
+  - libsqlite=3.42.0
+  - libstdcxx-ng=13.1.0
   - libuuid=2.38.1
   - libzlib=1.2.13
-  - ncurses=6.3
-  - openssl=3.1.0
-  - packaging=23.0
-  - paramiko=3.1.0
-  - pip=23.0.1
-  - pluggy=1.0.0
-  - psycopg2=2.9.3
+  - ncurses=6.4
+  - openssl=3.1.2
+  - packaging=23.1
+  - paramiko=3.3.1
+  - pip=23.2.1
+  - pluggy=1.2.0
+  - psycopg2=2.9.6
   - pycparser=2.21
   - pynacl=1.5.0
-  - pyopenssl=23.1.1
   - pysocks=1.7.1
-  - pytest=7.2.2
-  - python=3.10.10
+  - pytest=7.4.0
+  - python=3.10.12
   - python-json-logger=2.0.7
   - python_abi=3.10
   - readline=8.2
-  - requests=2.28.2
-  - setuptools=67.6.1
+  - requests=2.31.0
+  - setuptools=68.0.0
   - six=1.16.0
-  - sqlalchemy=1.4.46
+  - sqlalchemy=2.0.20
   - tk=8.6.12
   - tomli=2.0.1
-  - typing-extensions=4.5.0
-  - typing_extensions=4.5.0
+  - typing-extensions=4.7.1
+  - typing_extensions=4.7.1
   - tzdata=2023c
-  - urllib3=1.26.15
-  - wheel=0.40.0
+  - urllib3=2.0.4
+  - wheel=0.41.1
+  - wrapt=1.15.0
   - xz=5.2.6
   - pip:
       - pastaplus-prune==2023.3.30
-prefix: /home/servilla/anaconda3/envs/prune
+prefix: /home/servilla/miniconda3/envs/prune
