--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,36 @@
-attrs==22.2.0
 bcrypt==3.2.2
-brotlipy==0.7.0
-certifi==2022.12.7
+Brotli==1.0.9
+certifi==2023.7.22
 cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
+charset-normalizer==3.2.0
+click==8.1.6
 colorama==0.4.6
-cryptography==40.0.1
+cryptography==41.0.3
 daiquiri==3.0.0
-exceptiongroup==1.1.1
-fabric==3.0.0
+decorator==5.1.1
+Deprecated==1.2.14
+exceptiongroup==1.1.3
+fabric==3.2.1
 greenlet==2.0.2
 idna==3.4
 iniconfig==2.0.0
-invoke==2.0.0
-packaging==23.0
-paramiko==3.1.0
-pastaplus.prune==2023.3.30
-pip==23.0.1
-pluggy==1.0.0
-psycopg2==2.9.3
+invoke==2.2.0
+packaging==23.1
+paramiko==3.3.1
+pastaplus.prune @ git+https://github.com/PASTAplus/prune
+pip==23.2.1
+pluggy==1.2.0
+psycopg2==2.9.6
 pycparser==2.21
 PyNaCl==1.5.0
-pyOpenSSL==23.1.1
 PySocks==1.7.1
-pytest==7.2.2
+pytest==7.4.0
 python-json-logger==2.0.7
-requests==2.28.2
-setuptools==67.6.1
+requests==2.31.0
+setuptools==68.0.0
 six==1.16.0
 SQLAlchemy==1.4.46
 tomli==2.0.1
-typing_extensions==4.5.0
-urllib3==1.26.15
-wheel==0.40.0
+urllib3==2.0.4
+wheel==0.41.1
+wrapt==1.15.0
