--- a/environment.yml
+++ b/environment.yml
@@ -5,66 +5,66 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - bcrypt=3.2.2
-  - brotli-python=1.0.9
+  - bcrypt=4.1.2
+  - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2023.7.22
-  - certifi=2023.7.22
-  - cffi=1.15.1
-  - charset-normalizer=3.2.0
-  - click=8.1.6
+  - ca-certificates=2023.11.17
+  - certifi=2023.11.17
+  - cffi=1.16.0
+  - charset-normalizer=3.3.2
+  - click=8.1.7
   - colorama=0.4.6
-  - cryptography=41.0.3
+  - cryptography=41.0.7
   - daiquiri=3.0.0
   - decorator=5.1.1
   - deprecated=1.2.14
-  - exceptiongroup=1.1.3
-  - fabric=3.2.1
-  - greenlet=2.0.2
-  - idna=3.4
+  - exceptiongroup=1.2.0
+  - fabric=3.2.2
+  - greenlet=3.0.3
+  - idna=3.6
   - iniconfig=2.0.0
   - invoke=2.2.0
   - keyutils=1.6.1
   - krb5=1.21.2
   - ld_impl_linux-64=2.40
   - libedit=3.1.20191231
+  - libexpat=2.5.0
   - libffi=3.4.2
-  - libgcc-ng=13.1.0
-  - libgomp=13.1.0
-  - libnsl=2.0.0
-  - libpq=15.4
+  - libgcc-ng=13.2.0
+  - libgomp=13.2.0
+  - libnsl=2.0.1
+  - libpq=16.1
   - libsodium=1.0.18
-  - libsqlite=3.42.0
-  - libstdcxx-ng=13.1.0
+  - libsqlite=3.44.2
+  - libstdcxx-ng=13.2.0
   - libuuid=2.38.1
+  - libxcrypt=4.4.36
   - libzlib=1.2.13
   - ncurses=6.4
-  - openssl=3.1.2
-  - packaging=23.1
-  - paramiko=3.3.1
-  - pip=23.2.1
-  - pluggy=1.2.0
-  - psycopg2=2.9.6
+  - openssl=3.2.0
+  - packaging=23.2
+  - paramiko=3.4.0
+  - pip=23.3.2
+  - pluggy=1.3.0
+  - psycopg2=2.9.9
   - pycparser=2.21
   - pynacl=1.5.0
   - pysocks=1.7.1
-  - pytest=7.4.0
-  - python=3.10.12
+  - pytest=7.4.3
+  - python=3.11.7
   - python-json-logger=2.0.7
-  - python_abi=3.10
+  - python_abi=3.11
   - readline=8.2
   - requests=2.31.0
-  - setuptools=68.0.0
+  - setuptools=68.2.2
   - six=1.16.0
-  - sqlalchemy=2.0.20
-  - tk=8.6.12
+  - sqlalchemy=1.4.46
+  - tk=8.6.13
   - tomli=2.0.1
-  - typing-extensions=4.7.1
-  - typing_extensions=4.7.1
-  - tzdata=2023c
-  - urllib3=2.0.4
-  - wheel=0.41.1
-  - wrapt=1.15.0
+  - tzdata=2023d
+  - urllib3=2.1.0
+  - wheel=0.42.0
+  - wrapt=1.16.0
   - xz=5.2.6
   - pip:
       - pastaplus-prune==2023.3.30
