--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,36 @@
-bcrypt==3.2.2
-Brotli==1.0.9
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.6
+bcrypt==4.1.2
+Brotli==1.1.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
-cryptography==41.0.3
+cryptography==41.0.7
 daiquiri==3.0.0
 decorator==5.1.1
 Deprecated==1.2.14
-exceptiongroup==1.1.3
-fabric==3.2.1
-greenlet==2.0.2
-idna==3.4
+exceptiongroup==1.2.0
+fabric==3.2.2
+greenlet==3.0.3
+idna==3.6
 iniconfig==2.0.0
 invoke==2.2.0
-packaging==23.1
-paramiko==3.3.1
-pastaplus.prune @ git+https://github.com/PASTAplus/prune
-pip==23.2.1
-pluggy==1.2.0
-psycopg2==2.9.6
+packaging==23.2
+paramiko==3.4.0
+pastaplus.prune==2023.3.30
+pip==23.3.2
+pluggy==1.3.0
+psycopg2==2.9.9
 pycparser==2.21
 PyNaCl==1.5.0
 PySocks==1.7.1
-pytest==7.4.0
+pytest==7.4.3
 python-json-logger==2.0.7
 requests==2.31.0
-setuptools==68.0.0
+setuptools==68.2.2
 six==1.16.0
 SQLAlchemy==1.4.46
 tomli==2.0.1
-urllib3==2.0.4
-wheel==0.41.1
-wrapt==1.15.0
+urllib3==2.1.0
+wheel==0.42.0
+wrapt==1.16.0
