Refactor logging to stdout and force DOI tombstoning on all prunes

--- a/src/prune/config.py.template
+++ b/src/prune/config.py.template
@@ -28,9 +28,7 @@ class Config:
     DATACITE_PW = "SECRET_PASSWORD"
     DATACITE_EP = "https://mds.datacite.org/"
     DATACITE_TEST_EP = "https://mds.test.datacite.org/"
-    TOMBSTONE = (
-        "https://edirepository.org/data/tombstone"
-    )
+    TOMBSTONE = "https://edirepository.org/data/tombstone"
 
     PRODUCTION = ["prod", "production"]
     STAGING = ["stage", "staging"]
