--- a/environment.yml
+++ b/environment.yml
@@ -8,13 +8,13 @@ dependencies:
   - bcrypt=4.1.2
   - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2023.11.17
-  - certifi=2023.11.17
+  - ca-certificates=2024.2.2
+  - certifi=2024.2.2
   - cffi=1.16.0
   - charset-normalizer=3.3.2
   - click=8.1.7
   - colorama=0.4.6
-  - cryptography=41.0.7
+  - cryptography=42.0.5
   - daiquiri=3.0.0
   - decorator=5.1.1
   - deprecated=1.2.14
@@ -33,39 +33,37 @@ dependencies:
   - libgcc-ng=13.2.0
   - libgomp=13.2.0
   - libnsl=2.0.1
-  - libpq=16.1
+  - libpq=16.2
   - libsodium=1.0.18
-  - libsqlite=3.44.2
+  - libsqlite=3.45.1
   - libstdcxx-ng=13.2.0
   - libuuid=2.38.1
   - libxcrypt=4.4.36
   - libzlib=1.2.13
   - ncurses=6.4
-  - openssl=3.2.0
+  - openssl=3.2.1
   - packaging=23.2
   - paramiko=3.4.0
-  - pip=23.3.2
-  - pluggy=1.3.0
+  - pip=24.0
+  - pluggy=1.4.0
   - psycopg2=2.9.9
   - pycparser=2.21
   - pynacl=1.5.0
   - pysocks=1.7.1
-  - pytest=7.4.3
-  - python=3.11.7
+  - pytest=8.0.2
+  - python=3.11.8
   - python-json-logger=2.0.7
   - python_abi=3.11
   - readline=8.2
   - requests=2.31.0
-  - setuptools=68.2.2
+  - setuptools=69.1.1
   - six=1.16.0
   - sqlalchemy=1.4.46
   - tk=8.6.13
   - tomli=2.0.1
-  - tzdata=2023d
-  - urllib3=2.1.0
+  - tzdata=2024a
+  - urllib3=2.2.1
   - wheel=0.42.0
   - wrapt=1.16.0
   - xz=5.2.6
-  - pip:
-      - pastaplus-prune==2023.3.30
 prefix: /home/servilla/miniconda3/envs/prune
