--- a/environment.yml
+++ b/environment.yml
@@ -5,65 +5,76 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - bcrypt=4.1.3
+  - bcrypt=4.3.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2024.2.2
-  - certifi=2024.2.2
-  - cffi=1.16.0
-  - charset-normalizer=3.3.2
-  - click=8.1.7
+  - ca-certificates=2025.1.31
+  - certifi=2025.1.31
+  - cffi=1.17.1
+  - charset-normalizer=3.4.1
+  - click=8.1.8
   - colorama=0.4.6
-  - cryptography=42.0.7
+  - cryptography=44.0.2
+  - cyrus-sasl=2.1.27
   - daiquiri=3.0.0
-  - decorator=5.1.1
-  - deprecated=1.2.14
-  - exceptiongroup=1.2.0
+  - decorator=5.2.1
+  - deprecated=1.2.18
+  - exceptiongroup=1.2.2
   - fabric=3.2.2
-  - greenlet=3.0.3
-  - idna=3.7
+  - greenlet=3.1.1
+  - h2=4.2.0
+  - hpack=4.1.0
+  - hyperframe=6.1.0
+  - icu=75.1
+  - idna=3.10
   - iniconfig=2.0.0
   - invoke=2.2.0
   - keyutils=1.6.1
-  - krb5=1.21.2
-  - ld_impl_linux-64=2.40
-  - libedit=3.1.20191231
-  - libexpat=2.6.2
-  - libffi=3.4.2
-  - libgcc-ng=13.2.0
-  - libgomp=13.2.0
+  - krb5=1.21.3
+  - ld_impl_linux-64=2.43
+  - libedit=3.1.20250104
+  - libexpat=2.6.4
+  - libffi=3.4.6
+  - libgcc=14.2.0
+  - libgcc-ng=14.2.0
+  - libgomp=14.2.0
+  - liblzma=5.6.4
   - libnsl=2.0.1
-  - libpq=16.3
-  - libsodium=1.0.18
-  - libsqlite=3.45.3
-  - libstdcxx-ng=13.2.0
+  - libntlm=1.8
+  - libpq=17.4
+  - libsodium=1.0.20
+  - libsqlite=3.49.1
+  - libstdcxx=14.2.0
+  - libstdcxx-ng=14.2.0
   - libuuid=2.38.1
   - libxcrypt=4.4.36
-  - libzlib=1.2.13
+  - libzlib=1.3.1
   - ncurses=6.5
-  - openssl=3.3.0
-  - packaging=24.0
-  - paramiko=3.4.0
-  - pip=24.0
+  - openldap=2.6.9
+  - openssl=3.4.1
+  - packaging=24.2
+  - paramiko=3.5.1
+  - pip=25.0.1
   - pluggy=1.5.0
   - psycopg2=2.9.9
   - pycparser=2.22
   - pynacl=1.5.0
   - pysocks=1.7.1
-  - pytest=8.2.1
-  - python=3.11.9
+  - pytest=8.3.5
+  - python=3.11.11
   - python-json-logger=2.0.7
   - python_abi=3.11
   - readline=8.2
-  - requests=2.32.2
-  - setuptools=70.0.0
-  - six=1.16.0
+  - requests=2.32.3
+  - setuptools=75.8.2
+  - six=1.17.0
   - sqlalchemy=1.4.46
   - tk=8.6.13
-  - tomli=2.0.1
-  - tzdata=2024a
-  - urllib3=2.2.1
-  - wheel=0.43.0
-  - wrapt=1.16.0
-  - xz=5.2.6
+  - tomli=2.2.1
+  - tzdata=2025a
+  - urllib3=2.3.0
+  - wheel=0.45.1
+  - wrapt=1.17.2
+  - zstandard=0.23.0
+  - zstd=1.5.6
 prefix: /home/servilla/miniconda3/envs/prune
