--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,39 @@
-bcrypt==4.1.3
+bcrypt==4.3.0
 Brotli==1.1.0
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
-cryptography==42.0.7
+cryptography==44.0.2
 daiquiri==3.0.0
-decorator==5.1.1
-Deprecated==1.2.14
-exceptiongroup==1.2.0
+decorator==5.2.1
+Deprecated==1.2.18
+exceptiongroup==1.2.2
 fabric==3.2.2
-greenlet==3.0.3
-idna==3.7
+greenlet==3.1.1
+h2==4.2.0
+hpack==4.1.0
+hyperframe==6.1.0
+idna==3.10
 iniconfig==2.0.0
 invoke==2.2.0
-packaging==24.0
-paramiko==3.4.0
-pip==24.0
+packaging==24.2
+paramiko==3.5.1
+pip==25.0.1
 pluggy==1.5.0
 psycopg2==2.9.9
 pycparser==2.22
 PyNaCl==1.5.0
 PySocks==1.7.1
-pytest==8.2.1
+pytest==8.3.5
 python-json-logger==2.0.7
-requests==2.32.2
-setuptools==70.0.0
-six==1.16.0
+requests==2.32.3
+setuptools==75.8.2
+six==1.17.0
 SQLAlchemy==1.4.46
-tomli==2.0.1
-urllib3==2.2.1
-wheel==0.43.0
-wrapt==1.16.0
+tomli==2.2.1
+urllib3==2.3.0
+wheel==0.45.1
+wrapt==1.17.2
+zstandard==0.23.0
