--- a/environment.yml
+++ b/environment.yml
@@ -3,78 +3,79 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - bcrypt=4.3.0
-  - brotli-python=1.1.0
-  - bzip2=1.0.8
-  - ca-certificates=2025.1.31
-  - certifi=2025.1.31
-  - cffi=1.17.1
-  - charset-normalizer=3.4.1
-  - click=8.1.8
-  - colorama=0.4.6
-  - cryptography=44.0.2
-  - cyrus-sasl=2.1.27
-  - daiquiri=3.0.0
-  - decorator=5.2.1
-  - deprecated=1.2.18
-  - exceptiongroup=1.2.2
-  - fabric=3.2.2
-  - greenlet=3.1.1
-  - h2=4.2.0
-  - hpack=4.1.0
-  - hyperframe=6.1.0
-  - icu=75.1
-  - idna=3.10
-  - iniconfig=2.0.0
-  - invoke=2.2.0
-  - keyutils=1.6.1
-  - krb5=1.21.3
-  - ld_impl_linux-64=2.43
-  - libedit=3.1.20250104
-  - libexpat=2.6.4
-  - libffi=3.4.6
-  - libgcc=14.2.0
-  - libgcc-ng=14.2.0
-  - libgomp=14.2.0
-  - liblzma=5.6.4
-  - libnsl=2.0.1
-  - libntlm=1.8
-  - libpq=17.4
-  - libsodium=1.0.20
-  - libsqlite=3.49.1
-  - libstdcxx=14.2.0
-  - libstdcxx-ng=14.2.0
-  - libuuid=2.38.1
-  - libxcrypt=4.4.36
-  - libzlib=1.3.1
-  - ncurses=6.5
-  - openldap=2.6.9
-  - openssl=3.4.1
-  - packaging=24.2
-  - paramiko=3.5.1
-  - pip=25.0.1
-  - pluggy=1.5.0
-  - psycopg2=2.9.9
-  - pycparser=2.22
-  - pynacl=1.5.0
-  - pysocks=1.7.1
-  - pytest=8.3.5
-  - python=3.11.11
-  - python-json-logger=2.0.7
-  - python_abi=3.11
-  - readline=8.2
-  - requests=2.32.3
-  - setuptools=75.8.2
-  - six=1.17.0
-  - sqlalchemy=1.4.46
-  - tk=8.6.13
-  - tomli=2.2.1
-  - tzdata=2025a
-  - urllib3=2.3.0
-  - wheel=0.45.1
-  - wrapt=1.17.2
-  - zstandard=0.23.0
-  - zstd=1.5.6
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - bcrypt=4.3.0=py311h9e33e62_0
+  - brotli-python=1.1.0=py311hfdbb021_2
+  - bzip2=1.0.8=h4bc722e_7
+  - ca-certificates=2025.4.26=hbd8a1cb_0
+  - certifi=2025.4.26=pyhd8ed1ab_0
+  - cffi=1.17.1=py311hf29c0ef_0
+  - charset-normalizer=3.4.2=pyhd8ed1ab_0
+  - click=8.2.1=pyh707e725_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - cryptography=45.0.3=py311hafd3f86_0
+  - cyrus-sasl=2.1.27=h54b06d7_7
+  - daiquiri=3.0.0=pyhd3deb0d_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - deprecated=1.2.18=pyhd8ed1ab_0
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - fabric=3.2.2=pyhd8ed1ab_1
+  - greenlet=3.2.2=py311hfdbb021_0
+  - h2=4.2.0=pyhd8ed1ab_0
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=75.1=he02047a_0
+  - idna=3.10=pyhd8ed1ab_1
+  - iniconfig=2.0.0=pyhd8ed1ab_1
+  - invoke=2.2.0=pyhd8ed1ab_1
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.3=h659f571_0
+  - ld_impl_linux-64=2.43=h712a8e2_4
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libexpat=2.7.0=h5888daf_0
+  - libffi=3.4.6=h2dba641_1
+  - libgcc=15.1.0=h767d61c_2
+  - libgcc-ng=15.1.0=h69a702a_2
+  - libgomp=15.1.0=h767d61c_2
+  - liblzma=5.8.1=hb9d3cd8_1
+  - libnsl=2.0.1=hd590300_0
+  - libntlm=1.8=hb9d3cd8_0
+  - libpq=17.5=h27ae623_0
+  - libsodium=1.0.20=h4ab18f5_0
+  - libsqlite=3.50.0=hee588c1_0
+  - libstdcxx=15.1.0=h8f9b012_2
+  - libstdcxx-ng=15.1.0=h4852527_2
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - ncurses=6.5=h2d0b736_3
+  - openldap=2.6.10=he970967_0
+  - openssl=3.5.0=h7b32b05_1
+  - packaging=25.0=pyh29332c3_1
+  - paramiko=3.5.1=pyhd8ed1ab_0
+  - pip=25.1.1=pyh8b19718_0
+  - pluggy=1.6.0=pyhd8ed1ab_0
+  - psycopg2=2.9.10=py311h83e8966_0
+  - pycparser=2.22=pyh29332c3_1
+  - pygments=2.19.1=pyhd8ed1ab_0
+  - pynacl=1.5.0=py311h9ecbd09_4
+  - pysocks=1.7.1=pyha55dd90_7
+  - pytest=8.4.0=pyhd8ed1ab_0
+  - python=3.11.13=h9e4cc4f_0_cpython
+  - python-json-logger=2.0.7=pyhd8ed1ab_0
+  - python_abi=3.11=7_cp311
+  - readline=8.2=h8c095d6_2
+  - requests=2.32.3=pyhd8ed1ab_1
+  - setuptools=80.9.0=pyhff2d567_0
+  - six=1.17.0=pyhd8ed1ab_0
+  - sqlalchemy=1.4.46=py311h2582759_0
+  - tk=8.6.13=noxft_hd72426e_102
+  - tomli=2.2.1=pyhd8ed1ab_1
+  - typing_extensions=4.14.0=pyhe01879c_0
+  - tzdata=2025b=h78e105d_0
+  - urllib3=2.4.0=pyhd8ed1ab_0
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - wrapt=1.17.2=py311h9ecbd09_0
+  - zstandard=0.23.0=py311h9ecbd09_2
 prefix: /home/servilla/miniconda3/envs/prune
