--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,41 @@
 bcrypt==4.3.0
 Brotli==1.1.0
-certifi==2025.1.31
+certifi==2025.4.26
 cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
+charset-normalizer==3.4.2
+click==8.2.1
 colorama==0.4.6
-cryptography==44.0.2
+cryptography==45.0.3
 daiquiri==3.0.0
 decorator==5.2.1
 Deprecated==1.2.18
-exceptiongroup==1.2.2
+exceptiongroup==1.3.0
 fabric==3.2.2
-greenlet==3.1.1
+greenlet==3.2.2
 h2==4.2.0
 hpack==4.1.0
 hyperframe==6.1.0
 idna==3.10
 iniconfig==2.0.0
 invoke==2.2.0
-packaging==24.2
+packaging==25.0
 paramiko==3.5.1
-pip==25.0.1
-pluggy==1.5.0
-psycopg2==2.9.9
+pip==25.1.1
+pluggy==1.6.0
+psycopg2==2.9.10
 pycparser==2.22
+Pygments==2.19.1
 PyNaCl==1.5.0
 PySocks==1.7.1
-pytest==8.3.5
+pytest==8.4.0
 python-json-logger==2.0.7
 requests==2.32.3
-setuptools==75.8.2
+setuptools==80.9.0
 six==1.17.0
 SQLAlchemy==1.4.46
 tomli==2.2.1
-urllib3==2.3.0
+typing_extensions==4.14.0
+urllib3==2.4.0
 wheel==0.45.1
 wrapt==1.17.2
 zstandard==0.23.0
