--- a/environment.yml
+++ b/environment.yml
@@ -5,23 +5,23 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - bcrypt=4.3.0=py311h9e33e62_0
-  - brotli-python=1.1.0=py311hfdbb021_2
+  - bcrypt=4.3.0=py311hdae7d1d_1
+  - brotli-python=1.1.0=py311hfdbb021_3
   - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2025.4.26=hbd8a1cb_0
-  - certifi=2025.4.26=pyhd8ed1ab_0
+  - ca-certificates=2025.6.15=hbd8a1cb_0
+  - certifi=2025.6.15=pyhd8ed1ab_0
   - cffi=1.17.1=py311hf29c0ef_0
   - charset-normalizer=3.4.2=pyhd8ed1ab_0
   - click=8.2.1=pyh707e725_0
   - colorama=0.4.6=pyhd8ed1ab_1
-  - cryptography=45.0.3=py311hafd3f86_0
-  - cyrus-sasl=2.1.27=h54b06d7_7
+  - cryptography=45.0.4=py311hafd3f86_0
+  - cyrus-sasl=2.1.28=hd9c7081_0
   - daiquiri=3.0.0=pyhd3deb0d_0
   - decorator=5.2.1=pyhd8ed1ab_0
   - deprecated=1.2.18=pyhd8ed1ab_0
   - exceptiongroup=1.3.0=pyhd8ed1ab_0
   - fabric=3.2.2=pyhd8ed1ab_1
-  - greenlet=3.2.2=py311hfdbb021_0
+  - greenlet=3.2.3=py311hfdbb021_0
   - h2=4.2.0=pyhd8ed1ab_0
   - hpack=4.1.0=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
@@ -31,19 +31,19 @@ dependencies:
   - invoke=2.2.0=pyhd8ed1ab_1
   - keyutils=1.6.1=h166bdaf_0
   - krb5=1.21.3=h659f571_0
-  - ld_impl_linux-64=2.43=h712a8e2_4
+  - ld_impl_linux-64=2.43=h1423503_5
   - libedit=3.1.20250104=pl5321h7949ede_0
   - libexpat=2.7.0=h5888daf_0
   - libffi=3.4.6=h2dba641_1
   - libgcc=15.1.0=h767d61c_2
   - libgcc-ng=15.1.0=h69a702a_2
   - libgomp=15.1.0=h767d61c_2
-  - liblzma=5.8.1=hb9d3cd8_1
+  - liblzma=5.8.1=hb9d3cd8_2
   - libnsl=2.0.1=hd590300_0
   - libntlm=1.8=hb9d3cd8_0
   - libpq=17.5=h27ae623_0
   - libsodium=1.0.20=h4ab18f5_0
-  - libsqlite=3.50.0=hee588c1_0
+  - libsqlite=3.50.1=hee588c1_0
   - libstdcxx=15.1.0=h8f9b012_2
   - libstdcxx-ng=15.1.0=h4852527_2
   - libuuid=2.38.1=h0b41bf4_0
@@ -61,12 +61,12 @@ dependencies:
   - pygments=2.19.1=pyhd8ed1ab_0
   - pynacl=1.5.0=py311h9ecbd09_4
   - pysocks=1.7.1=pyha55dd90_7
-  - pytest=8.4.0=pyhd8ed1ab_0
+  - pytest=8.4.1=pyhd8ed1ab_0
   - python=3.11.13=h9e4cc4f_0_cpython
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python_abi=3.11=7_cp311
   - readline=8.2=h8c095d6_2
-  - requests=2.32.3=pyhd8ed1ab_1
+  - requests=2.32.4=pyhd8ed1ab_0
   - setuptools=80.9.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sqlalchemy=1.4.46=py311h2582759_0
